# work-flow-production

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py  update_version.py  versioneer.py
new_app/: _version.py
new_app/dashboard/: bokeh_app.py  logger.py  plotly_app.py  runner.py
new_app/models/: models.py
new_app/server/: server.py
