[tool.poetry]
name = "new-app"
version = "0.1.0.post0.dev0+gd2b4a77"
description = ""
authors = ["Daniel Stoops <danielstoops25@gmail.co.il>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bokeh = "^3.4.0"
websockets = "^12.0"
pydantic = "^2.6.4"
dash = "^2.16.1"
versioneer = "^0.29"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
reorder-python-imports = "^3.12.0"
ipython = "^8.22.2"
mypy = "^1.9.0"
jupyterlab = "^4.1.5"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "new_app"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
exclude = ['^versioneer\.py$', '^new_app/_version\.py$', '^setup\.py$']

[tool.versioneer]
VCS = "git"
style = "pep440-post"
versionfile_source = "new_app/_version.py"
versionfile_build = "_version.py"
tag_prefix = ""
